unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/WoB_Opp_Offer_Visibility_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>WoB Opp Offer Visibility Mapping</label>
    <pluralLabel>WoB Opp Offer Visibility Mappings</pluralLabel>
</CustomObject>