unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/AAC_Nasahi_Panel__c.field-meta.xml
<CustomField>
    <fullName>AAC_Nasahi_Panel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AAC - Nasahi Panel</label>
    <type>Checkbox</type>
</CustomField>