unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Balustrading__c.field-meta.xml
<CustomField>
    <fullName>Balustrading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balustrading</label>
    <type>Checkbox</type>
</CustomField>