unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Cladding__c.field-meta.xml
<CustomField>
    <fullName>Cladding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cladding</label>
    <type>Checkbox</type>
</CustomField>