unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Flooring__c.field-meta.xml
<CustomField>
    <fullName>Flooring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flooring</label>
    <type>Checkbox</type>
</CustomField>