unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Garage_Door__c.field-meta.xml
<CustomField>
    <fullName>Garage_Door__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Door</label>
    <type>Checkbox</type>
</CustomField>