unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/HVAC__c.field-meta.xml
<CustomField>
    <fullName>HVAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVAC</label>
    <type>Checkbox</type>
</CustomField>