unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Insulation_Only__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insulation Only</label>
    <type>Checkbox</type>
</CustomField>