unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Joinery__c.field-meta.xml
<CustomField>
    <fullName>Joinery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joinery</label>
    <type>Checkbox</type>
</CustomField>