unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Plasterboard_Insulation__c.field-meta.xml
<CustomField>
    <fullName>Plasterboard_Insulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plasterboard &amp; Insulation</label>
    <type>Checkbox</type>
</CustomField>