unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
                <default>true</default>
                <label>Account Manager</label>
            </value>
            <value>
                <fullName>Commercial Joinery Sales</fullName>
            </value>
            <value>
                <fullName>Light Commercial Manager</fullName>
            </value>
            <value>
                <fullName>National Manager</fullName>
            </value>
            <value>
                <fullName>Organisations Sales</fullName>
            </value>
            <value>
                <fullName>Organisations Sales Manage</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Person BDM</fullName>
            </value>
            <value>
                <fullName>Sales Person Contact Centre</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>Sales Support BDM FOW</fullName>
            </value>
            <value>
                <fullName>Support - CUB</fullName>
            </value>
            <value>
                <fullName>Support Manager - Sales</fullName>
            </value>
            <value>
                <fullName>Support Manager - Trade PA</fullName>
            </value>
            <value>
                <fullName>Trade Specialist</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>