unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <label>Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>