unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <label>Project State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>