unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Render_Texture__c.field-meta.xml
<CustomField>
    <fullName>Render_Texture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Render &amp; Texture</label>
    <type>Checkbox</type>
</CustomField>