unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Residential_Lifts__c.field-meta.xml
<CustomField>
    <fullName>Residential_Lifts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residential Lifts</label>
    <type>Checkbox</type>
</CustomField>