unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Shower_Screens__c.field-meta.xml
<CustomField>
    <fullName>Shower_Screens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shower Screens</label>
    <type>Checkbox</type>
</CustomField>