unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Staircases__c.field-meta.xml
<CustomField>
    <fullName>Staircases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staircases</label>
    <type>Checkbox</type>
</CustomField>