unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Tactile__c.field-meta.xml
<CustomField>
    <fullName>Tactile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tactile</label>
    <type>Checkbox</type>
</CustomField>