unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Wardrobe__c.field-meta.xml
<CustomField>
    <fullName>Wardrobe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wardrobe</label>
    <type>Checkbox</type>
</CustomField>