unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Waterproofing_Sealing__c.field-meta.xml
<CustomField>
    <fullName>Waterproofing_Sealing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waterproofing/Sealing</label>
    <type>Checkbox</type>
</CustomField>