unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Window_Furnishing__c.field-meta.xml
<CustomField>
    <fullName>Window_Furnishing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Window Furnishing</label>
    <type>Checkbox</type>
</CustomField>