unpackaged/main/default/objects/WoB_Opp_Offer_Visibility_Mapping__mdt/fields/Windows__c.field-meta.xml
<CustomField>
    <fullName>Windows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windows</label>
    <type>Checkbox</type>
</CustomField>